# zim-serve

./: pyproject.toml
zim_serve/: serve.py
